--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     </section>
 
     <section class="card-container">
+      <h1>
+        <span class="days"> </span>
+        " days, "
+        <span class="hours"> </span>
+        " hours, "
+        <span class="minutes"> </span>
+        " minutes, and "
+        <span class="seconds"> </span>
+        " seconds until school starts. "
+      </h2>
+
       <h2>My summer bucket-list:</h2>
 
     </section>
