https://jordanpemberton13.github.io/summerbucketlist/

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
 
 <body>
+  <div class="container">
+    <h1 id="head">School starts in:</h1>
+    <ul>
+      <li><span id="days"></span>days</li>
+      <li><span id="hours"></span>Hours</li>
+      <li><span id="minutes"></span>Minutes</li>
+      <li><span id="seconds"></span>Seconds</li>
+    </ul>
+  </div>
+
   <article class="content">
     <section class="user-input">
       <input class="name" type="text" placeholder="Summer bucket-list?">
@@ -15,17 +25,6 @@
     </section>
 
     <section class="card-container">
-      <h1>
-        <span class="days"> </span>
-        " days, "
-        <span class="hours"> </span>
-        " hours, "
-        <span class="minutes"> </span>
-        " minutes, and "
-        <span class="seconds"> </span>
-        " seconds until school starts. "
-      </h2>
-
       <h2>My summer bucket-list:</h2>
 
     </section>
