--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
 
     <section class="card-container">
-      <h2>My summer bucket-list:</h2>
+      <h2>my summer bucket-list:</h2>
 
     </section>
   </article>
