--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <title>!Summer Bucket-List!</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   </head>
 
 <body>
+
+  <i class="far fa-sun"></i>
+
   <div class="container">
     <h1 id="head">School starts in:</h1>
     <ul>
